data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_536.wast
;; 7. **Test Loop with Incorrect Operand Stack Manipulation**:    Implement a loop where operand stack values mismatch expected block type, preventing valid branch interruption, resulting in an infinite loop.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func (loop (type $sig) (i64.const 0) (call 0)))
  )
  "type mismatch"
)